--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -64,7 +64,7 @@
                 <p><span data-i18n="about_me.address.city">{{ site.author.address.city }}</span></p>
                 <p><span data-i18n="about_me.address.country">{{ site.author.address.country }}</span></p>
             </div>
-            <p><span data-i18n="about_me.vat">{{ site.author.vat }}</span></p>
+            <p>VAT: <span data-i18n="about_me.vat">{{ site.author.vat }}</span></p>
         </div>
     </div>
 </div>
