Add description and disable some pages

--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -59,6 +59,7 @@
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg m-b-lg wow zoomIn">
             <h4><span data-i18n="about_me.des">{{ site.author.desc }}</span></h4>
+            <p><span data-i18n="about_me.des">Founded in 2011, Konpax Trans it is a constantly growing company, which is building and consolidating its network of reliable partners accross European Union.</span></p>
             <div data-i18n="about_me.address">
                 <p><span data-i18n="about_me.address.street">{{ site.author.address.street }}</span></p>
                 <p><span data-i18n="about_me.address.city">{{ site.author.address.city }}</span></p>
